--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "nodemon --watch views --ext pug server.js",
         "start:prod": "SET NODE_ENV=production&& nodemon server.js",
-        "watch": "node-sass --watch public/scss/ --output public/css/"
+        "watch": "node-sass --watch public/scss --output public/css"
     },
     "keywords": [],
     "author": "",
