--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon --watch views --ext pug server.js",
+        "start": "nodemon server.js",
         "start:prod": "SET NODE_ENV=production&& nodemon server.js",
         "watch": "node-sass --watch public/scss --output public/css"
     },
