--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "license": "ISC",
     "dependencies": {
         "autoprefixer": "^10.4.14",
+        "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.8.3",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.1",
         "postcss": "^8.4.21",
         "postcss-cli": "^10.1.0",
         "pug": "^3.0.2",
+        "sharp": "^0.32.0",
         "tailwindcss": "^3.2.7",
         "validator": "^13.7.0"
     },
