--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "pug": "^3.0.2",
         "sharp": "^0.32.0",
         "slugify": "^1.6.6",
+        "stripe": "^12.0.0",
         "tailwindcss": "^3.2.7",
         "validator": "^13.7.0"
     },
